--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,1 @@
- # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
- 
- # Dependencies
- /node_modules
- 
- # Next.js build output
- /.next/
- /out/
- 
- # Production build
- /build
- 
- # Miscellaneous
- .DS_Store
- *.pem
- 
- # Debug logs
- npm-debug.log*
- yarn-debug.log*
- yarn-error.log*
- pnpm-debug.log*
- 
- # Local environment variables
- .env.local
- .env.development.local
- .env.test.local
- .env.production.local
- 
- # Vercel
- .vercel
- 
- # TypeScript
- *.tsbuildinfo
- next-env.d.ts
+node_modules/ 
