--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "archiver": "^5.3.1",
     "next": "13.5.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "jszip": "^3.10.1",
+    "resend": "^1.0.0"
   }
 }
