--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "jszip": "^3.10.1",
-    "resend": "^1.0.0"
+    "resend": "^1.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   }
 }
