--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "resend": "^1.0.0"
+    "resend": "^1.0.0",
+    "uuid": "^12.0.0"
   }
 }
